src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase article</label>
        <referenceTo>Purchase_article__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_orders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase order</label>
        <referenceTo>Purchase_order__c</referenceTo>
        <relationshipLabel>Invoiced</relationshipLabel>
        <relationshipName>Invoiced</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_spent__c</fullName>
        <label>Total spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>subproject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subproject</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>supplier__c</fullName>
        <label>Supplier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>